fixed alignment and added aria-labels to link.

--- a/_assets/css/_business-standards.scss
+++ b/_assets/css/_business-standards.scss
@@ -12,6 +12,7 @@
   text-decoration: none;
   text-align: center;
   display: block;
+  min-width: 130px;
 }
 
 .hrms-arrow {
